Events has rename to with S

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                         </div>
                     </div>
                     <div class="donation-events-view-events">
-                        <a href="">View All Event →</a>
+                        <a href="">View All Events →</a>
                     </div>
                 </div>
             </div>
