last 2nd box fully done

--- a/index.html
+++ b/index.html
@@ -367,12 +367,19 @@
                     </div>
                 </div>
             </div>
-            <div>
-                <div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
+            <div class="newsletter-main-div">
+                <div class="newsletter-div">
+                    <div class="newsletter-div-img"><img src="Images/Donation & Events/mail_FILL0_wght400_GRAD0_opsz48.png" alt="" width="90px"></div>
+                    <div class="newsletter-div-shortpara">
+                        <h2>Subscribe To NewsLetter</h2>
+                        <h3>Get updates to news & events</h3>
+                    </div>
+                    <div class="newsletter-div-email">
+                        <input type="email" placeholder="Your Email Address" style="width: 200px; height: 50px;">
+                    </div>
+                    <div class="newsletter-div-subs">
+                        <a href="">Subscribe</a>
+                    </div>
                 </div>
             </div>
         </div>
