--- a/index.html
+++ b/index.html
@@ -383,5 +383,12 @@
                 </div>
             </div>
         </div>
+        <div class="sponsers">
+            <div><img src="Images/last-2nd box/Europa.png" alt=""></div>
+            <div><img src="Images/last-2nd box/key vision.png" alt=""></div>
+            <div><img src="Images/last-2nd box/azis bank.png" alt=""></div>
+            <div><img src="Images/last-2nd box/credit.png" alt=""></div>
+            <div><img src="Images/last-2nd box/zab.png" alt=""></div>
+        </div>
     </body>
 </html>
