--- a/index.html
+++ b/index.html
@@ -390,5 +390,63 @@
             <div><img src="Images/last-2nd box/credit.png" alt=""></div>
             <div><img src="Images/last-2nd box/zab.png" alt=""></div>
         </div>
+        <div class="bottom-kingster-about">
+            <div class="Kingster-address">
+                <div class="bottom-kingster-img-head"><img src="Images/news-bar/apply-logo.png" alt=""><h1>Kingster University</h1></div>
+                <div>
+                    <div><h3>Box 35300</h3></div>
+                    <div><h3>1810 Campus Way NE</h3></div>
+                    <div><h3>Bothell, WA 98011-8246</h3></div>
+                    <div><h2>+1-2534-4456-345</h2></div>
+                    <div><h2><a href="">admin@kingsteruni.edu</a></h2><hr></div>
+                </div>
+            </div>
+            <div class="Kingster-campus">
+                <div class="bottom-kingster-headings"><h1>Our Campus</h1><hr></div>
+                <div class="bottom-campus">
+                    <div>Acedemic</div>
+                    <div>Plannig & Administration</div>
+                    <div>Campus Safety</div>
+                    <div>Office of the Chancellor</div>
+                    <div>Facility Services</div>
+                    <div>Human Resources</div>
+                </div>
+            </div>
+            <div class="kingster-campus-life">
+                <div class="bottom-kingster-headings"><h1>Campus life</h1><hr></div>
+                <div class="bottom-campus">
+                    <div>Accessibility</div>
+                    <div>Financial Aid</div>
+                    <div>Food Services</div>
+                    <div>Housing</div>
+                    <div>Information Technologies</div>
+                    <div>Student Life</div>
+                </div>
+            </div>
+            <div class="kingster-academics">
+                <div class="bottom-kingster-headings"><h1>Academics</h1><hr></div>
+                <div class="bottom-campus">
+                    <div>Canvas</div>
+                    <div>Catalyst</div>
+                    <div>Library</div>
+                    <div>Time Schedule</div>
+                    <div>Apply For Admissions</div>
+                    <div>Pay My Tuition</div>
+                </div>
+            </div>
+        </div>
+        <div class="last-bottom">
+            <div style="display: flex; justify-content: center; justify-content: space-between; justify-content: space-around; width: 100%; ">
+            <div>Copyright All Right Reserved 2018, GoodLayers</div>
+            <div class="bottom-img">
+                <div><a href=""><img src="Images/last-bottom/facebook.png" alt="" width="30px" height="30px"></a></div>
+                <div><a href=""><img src="Images/last-bottom/google-plus.png" alt="" width="30px" height="30px"></a></div>
+                <div><a href=""><img src="Images/last-bottom/linkedin.png" alt="" width="30px" height="30px"></a></div>
+                <div><a href=""><img src="Images/last-bottom/skype.png" alt="" width="30px" height="30px"></a></div>
+                <div><a href=""><img src="Images/last-bottom/twitter.png" alt="" width="30px" height="30px"></a></div>
+                <div><a href=""><img src="Images/last-bottom/instagram.png" alt="" width="30px" height="30px"></a></div>
+            </div>
+        </div>
+        </div>
     </body>
 </html>
