--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
         </div>
         <div class="last-bottom">
             <div style="display: flex; justify-content: center; justify-content: space-between; justify-content: space-around; width: 100%; ">
-            <div>Copyright All Right Reserved 2018, GoodLayers</div>
+            <div class="copyright">Copyright All Right Reserved 2018, GoodLayers</div>
             <div class="bottom-img">
                 <div><a href=""><img src="Images/last-bottom/facebook.png" alt="" width="30px" height="30px"></a></div>
                 <div><a href=""><img src="Images/last-bottom/google-plus.png" alt="" width="30px" height="30px"></a></div>
