--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="navwht">
             <div class="img"><img src="Images/navbar/logo.png" alt=""></div>
-            <div>
+            <div class="navwht-menu-list">
                 <ul type="none">
                     <li><a href="">Home</a></li>
                     <li><a href="">Pages</a></li>
@@ -262,7 +262,7 @@
             <div class="kings-news-right-div-main">
                 <div class="kings-right-div-first">
                     <div class="kings-news-right-Qlinks">
-                        <div style=" display:flex;padding-top: 30px; padding-bottom: 30px;">
+                        <div style=" display:flex;padding-top: 30px; padding-bottom: 30px;padding-left: 50px;padding-right: 50px; white-space: nowrap;">
                             <div><img src="Images/news-bar/link.png" alt="" style="width: 25px; height: 25px;"></div>
                             <div style="display: flex;align-items: center;"><p>Quick Links</p></div>
                         </div>
