About KU Page Working

--- a/About-KU.html
+++ b/About-KU.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/css-about.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
@@ -37,6 +38,60 @@
                 <li><a href="">University Life</a></li>
                 <li><a href=""><img style="height: 20px; width: 20px;" src="Images/navbar/Search.png" alt=""></a></li>
             </ul>
+        </div>
+    </div>
+    <div class="about-backimg">
+        <div><p>Knows Us Betters</p></div>
+        <div><h1>About Us</h1></div>
+    </div>
+    <div class="kings-history">
+        <div class="kings-histry">Kingster's History <hr style="margin-top: 5px ;height: 3px;background-color: rgb(65, 143, 65);"></div>
+        <div class="kings-history-article">
+            <div><p>If you would like to study in the university in the <br>
+                 heart of the city that focus on chaning the world <br>
+                 for better to morrow, you’re choosin the right <br>
+                 place. We do not use special formulas to select <br>
+                 students. We look at every single applicant’s <br>
+                 application, academic and personal, to select <br>
+                 students who suit to our community with a full <br>
+                 range of backgrounds. If you would like to study
+                </p>
+            </div>
+            <div><p>If you would like to study in the university in the <br>
+                heart of the city that focus on chaning the world <br>
+                for better to morrow, you’re choosin the right <br>
+                place. We do not use special formulas to select <br>
+                students. We look at every single applicant’s <br>
+                application, academic and personal, to select <br>
+                students who suit to our community.
+            </p>
+            </div>
+        </div>
+    </div>
+    <div class="kings-features">
+        <div class="kings-features-divs">
+            <div></div>
+            <div><h1>Our Philosophy</h1></div>
+            <div><p>A wonderful serenity has taken possession of my <br>
+                 entire soul, like these sweet mornings of spring <br>
+                 which I enjoy with my whole heart. I am alone, <br>
+                 and feel the charm of existence.</p></div>
+        </div>
+        <div class="kings-features-divs">
+            <div></div>
+            <div><h1>Kingster's Principle</h1></div>
+            <div><p>A wonderful serenity has taken possession of my <br>
+                entire soul, like these sweet mornings of spring <br>
+                which I enjoy with my whole heart. I am alone, <br>
+                and feel the charm of existence.</p></div>
+        </div>
+        <div class="kings-features-divs">
+            <div></div>
+            <div><h1>Key Of Success</h1></div>
+            <div><p>A wonderful serenity has taken possession of my <br>
+                entire soul, like these sweet mornings of spring <br>
+                which I enjoy with my whole heart. I am alone, <br>
+                and feel the charm of existence.</p></div>
         </div>
     </div>
 </body>
