about half done

--- a/About-KU.html
+++ b/About-KU.html
@@ -70,7 +70,7 @@
     </div>
     <div class="kings-features">
         <div class="kings-features-divs">
-            <div></div>
+            <div><img src="Images/About KU/Philosophy.png" alt=""></div>
             <div><h1>Our Philosophy</h1></div>
             <div><p>A wonderful serenity has taken possession of my <br>
                  entire soul, like these sweet mornings of spring <br>
@@ -78,7 +78,7 @@
                  and feel the charm of existence.</p></div>
         </div>
         <div class="kings-features-divs">
-            <div></div>
+            <div><img src="Images/About KU/principle.png" alt=""></div>
             <div><h1>Kingster's Principle</h1></div>
             <div><p>A wonderful serenity has taken possession of my <br>
                 entire soul, like these sweet mornings of spring <br>
@@ -86,13 +86,37 @@
                 and feel the charm of existence.</p></div>
         </div>
         <div class="kings-features-divs">
-            <div></div>
+            <div><img src="Images/About KU/success.png" alt=""></div>
             <div><h1>Key Of Success</h1></div>
             <div><p>A wonderful serenity has taken possession of my <br>
                 entire soul, like these sweet mornings of spring <br>
                 which I enjoy with my whole heart. I am alone, <br>
                 and feel the charm of existence.</p></div>
         </div>
+    </div>
+    <div>
+        <div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div></div>
+    </div>
+    <div>
+        <div></div>
+        <div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
+    <div>
+        <div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div></div>
     </div>
 </body>
 </html>
