About KU Page Done

--- a/About-KU.html
+++ b/About-KU.html
@@ -94,29 +94,106 @@
                 and feel the charm of existence.</p></div>
         </div>
     </div>
-    <div>
-        <div>
-            <div></div>
-            <div></div>
-            <div></div>
+    <div class="about-faclities">
+        <div class="about-faclities-div">
+            <div><img src="Images/About KU/Campus.png" alt=""></div>
+            <div><h1>Special Campus Tour</h1></div>
+            <div><p>Campus on a tour designed for prospective graduate and <br>
+                 professional students. You will see how our university like, facilities, <br>
+                 studenst and life in this university. Meet our graduate admissions <br>
+                 representative to learn more about our graduate programs and <br>
+                 decide what it the best for you.</p></div>
         </div>
-        <div></div>
+        <div class="about-faclities-img"><img src="Images/About KU/auditorium-g59716095d_1280.jpg" alt="" style="width: 100%"></div>
     </div>
-    <div>
-        <div></div>
-        <div>
-            <div></div>
-            <div></div>
-            <div></div>
+    <div class="about-faclities">
+        <div class="about-faclities-grad-img"><img src="Images/About KU/graduate-g6f8c0898c_1280.jpg" alt="" style="width: 100%"></div>
+        <div class="about-faclities-grad-div">
+            <div><img src="Images/About KU/Graduation.png" alt=""></div>
+            <div><h1>Graduation</h1></div>
+            <div><p>Campus on a tour designed for prospective graduate and <br>
+                professional students. You will see how our university like, facilities, <br>
+                studenst and life in this university. Meet our graduate admissions <br>
+                representative to learn more about our graduate programs and <br>
+                decide what it the best for you.</p></div>
         </div>
     </div>
-    <div>
-        <div>
-            <div></div>
-            <div></div>
-            <div></div>
+    <div class="about-faclities">
+        <div class="about-faclities-power-div">
+            <div><img src="Images/About KU/powerful.png" alt=""></div>
+            <div><h1>Powerful Alumni</h1></div>
+            <div><p>Campus on a tour designed for prospective graduate and <br>
+                professional students. You will see how our university like, facilities, <br>
+                studenst and life in this university. Meet our graduate admissions <br>
+                representative to learn more about our graduate programs and <br>
+                decide what it the best for you.</p></div>
         </div>
-        <div></div>
+        <div class="about-faclities-power-img"><img src="Images/About KU/1000_F_171012088_FTtoWVpSz1mNTfy5s4NQNWAyaH8eZs1e.jpg" alt="" style="width: 100%"></div>
+    </div>
+    <div class="sponsers">
+        <div><img src="Images/last-2nd box/Europa.png" alt=""></div>
+        <div><img src="Images/last-2nd box/key vision.png" alt=""></div>
+        <div><img src="Images/last-2nd box/azis bank.png" alt=""></div>
+        <div><img src="Images/last-2nd box/credit.png" alt=""></div>
+        <div><img src="Images/last-2nd box/zab.png" alt=""></div>
+    </div>
+    <div class="bottom-kingster-about">
+        <div class="Kingster-address">
+            <div class="bottom-kingster-img-head"><img src="Images/news-bar/apply-logo.png" alt=""><h1>Kingster University</h1></div>
+            <div>
+                <div><h3>Box 35300</h3></div>
+                <div><h3>1810 Campus Way NE</h3></div>
+                <div><h3>Bothell, WA 98011-8246</h3></div>
+                <div><h2>+1-2534-4456-345</h2></div>
+                <div><h2><a href="">admin@kingsteruni.edu</a></h2><hr></div>
+            </div>
+        </div>
+        <div class="Kingster-campus">
+            <div class="bottom-kingster-headings"><h1>Our Campus</h1><hr></div>
+            <div class="bottom-campus">
+                <div>Acedemic</div>
+                <div>Plannig & Administration</div>
+                <div>Campus Safety</div>
+                <div>Office of the Chancellor</div>
+                <div>Facility Services</div>
+                <div>Human Resources</div>
+            </div>
+        </div>
+        <div class="kingster-campus-life">
+            <div class="bottom-kingster-headings"><h1>Campus life</h1><hr></div>
+            <div class="bottom-campus">
+                <div>Accessibility</div>
+                <div>Financial Aid</div>
+                <div>Food Services</div>
+                <div>Housing</div>
+                <div>Information Technologies</div>
+                <div>Student Life</div>
+            </div>
+        </div>
+        <div class="kingster-academics">
+            <div class="bottom-kingster-headings"><h1>Academics</h1><hr></div>
+            <div class="bottom-campus">
+                <div>Canvas</div>
+                <div>Catalyst</div>
+                <div>Library</div>
+                <div>Time Schedule</div>
+                <div>Apply For Admissions</div>
+                <div>Pay My Tuition</div>
+            </div>
+        </div>
+    </div>
+    <div class="last-bottom">
+        <div style="display: flex; justify-content: center; justify-content: space-between; justify-content: space-around; width: 100%; ">
+        <div class="copyright">Copyright All Right Reserved 2018, GoodLayers</div>
+        <div class="bottom-img">
+            <div><a href=""><img src="Images/last-bottom/facebook.png" alt="" width="30px" height="30px"></a></div>
+            <div><a href=""><img src="Images/last-bottom/google-plus.png" alt="" width="30px" height="30px"></a></div>
+            <div><a href=""><img src="Images/last-bottom/linkedin.png" alt="" width="30px" height="30px"></a></div>
+            <div><a href=""><img src="Images/last-bottom/skype.png" alt="" width="30px" height="30px"></a></div>
+            <div><a href=""><img src="Images/last-bottom/twitter.png" alt="" width="30px" height="30px"></a></div>
+            <div><a href=""><img src="Images/last-bottom/instagram.png" alt="" width="30px" height="30px"></a></div>
+        </div>
+        </div>
     </div>
 </body>
 </html>
