--- a/About-KU.html
+++ b/About-KU.html
@@ -99,23 +99,23 @@
             <div><img src="Images/About KU/Campus.png" alt=""></div>
             <div><h1>Special Campus Tour</h1></div>
             <div><p>Campus on a tour designed for prospective graduate and <br>
-                 professional students. You will see how our university like, facilities, <br>
-                 studenst and life in this university. Meet our graduate admissions <br>
-                 representative to learn more about our graduate programs and <br>
-                 decide what it the best for you.</p></div>
+                    professional students. You will see how our university like, facilities, <br>
+                    studenst and life in this university. Meet our graduate admissions <br>
+                    representative to learn more about our graduate programs and <br>
+                    decide what it the best for you.</p></div>
         </div>
-        <div class="about-faclities-img"><img src="Images/About KU/auditorium-g59716095d_1280.jpg" alt="" style="width: 100%"></div>
+        <div class="about-faclities-img"><img src="Images/About KU/auditorium-g59716095d_1280.jpg" alt="" style="width: 100%;height: 500px;object-fit: cover;"></div>
     </div>
     <div class="about-faclities">
-        <div class="about-faclities-grad-img"><img src="Images/About KU/graduate-g6f8c0898c_1280.jpg" alt="" style="width: 100%"></div>
+        <div class="about-faclities-grad-img"><img src="Images/About KU/graduate-g6f8c0898c_1280.jpg" alt="" style="width: 100%;height: 500px;object-fit: cover;"></div>
         <div class="about-faclities-grad-div">
             <div><img src="Images/About KU/Graduation.png" alt=""></div>
             <div><h1>Graduation</h1></div>
             <div><p>Campus on a tour designed for prospective graduate and <br>
-                professional students. You will see how our university like, facilities, <br>
-                studenst and life in this university. Meet our graduate admissions <br>
-                representative to learn more about our graduate programs and <br>
-                decide what it the best for you.</p></div>
+                    professional students. You will see how our university like, facilities, <br>
+                    studenst and life in this university. Meet our graduate admissions <br>
+                    representative to learn more about our graduate programs and <br>
+                    decide what it the best for you.</p></div>
         </div>
     </div>
     <div class="about-faclities">
@@ -123,12 +123,12 @@
             <div><img src="Images/About KU/powerful.png" alt=""></div>
             <div><h1>Powerful Alumni</h1></div>
             <div><p>Campus on a tour designed for prospective graduate and <br>
-                professional students. You will see how our university like, facilities, <br>
-                studenst and life in this university. Meet our graduate admissions <br>
-                representative to learn more about our graduate programs and <br>
-                decide what it the best for you.</p></div>
+                    professional students. You will see how our university like, facilities, <br>
+                    studenst and life in this university. Meet our graduate admissions <br>
+                    representative to learn more about our graduate programs and <br>
+                    decide what it the best for you.</p></div>
         </div>
-        <div class="about-faclities-power-img"><img src="Images/About KU/1000_F_171012088_FTtoWVpSz1mNTfy5s4NQNWAyaH8eZs1e.jpg" alt="" style="width: 100%"></div>
+        <div class="about-faclities-power-img"><img src="Images/About KU/1000_F_171012088_FTtoWVpSz1mNTfy5s4NQNWAyaH8eZs1e.jpg" alt="" style="width: 100%;height: 500px;object-fit: cover;"></div>
     </div>
     <div class="sponsers">
         <div><img src="Images/last-2nd box/Europa.png" alt=""></div>
