--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                         <h3>Get updates to news & events</h3>
                     </div>
                     <div class="newsletter-div-email">
-                        <input type="email" placeholder="Your Email Address" style="width: 200px; height: 50px;">
+                        <input type="email" placeholder="Your Email Address">
                     </div>
                     <div class="newsletter-div-subs">
                         <a href="">Subscribe</a>
